<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="226dp"
        android:layout_height="96dp"
        android:text="@string/where_would"
        android:layout_marginStart="25dp"
        android:textSize="25dp"
        android:layout_marginTop="74dp"
        android:textAppearance="@style/where_would"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="97dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:orientation="horizontal"
        android:layout_gravity="center">

        <CheckBox
            android:id="@+id/radioCheckBox"
            android:layout_width="154dp"
            android:layout_height="wrap_content"
            android:text="@string/radio"
            android:textSize="25dp"
            android:textFontWeight="500"/>
        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />
        <TextView
            android:id="@+id/radio_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_price"
            android:textSize="25dp"
            android:textAlignment="viewEnd"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:orientation="horizontal"
        android:layout_gravity="center">

        <CheckBox
            android:id="@+id/spotifyCheckBox"
            android:layout_width="154dp"
            android:layout_height="wrap_content"
            android:text="@string/spotify"
            android:textSize="25dp"
            android:textFontWeight="500"/>
        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/spotify_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/spotify_price"
            android:textSize="25dp"
            android:textAlignment="viewEnd"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:orientation="horizontal"
        android:layout_gravity="center">

        <CheckBox
            android:id="@+id/podcastCheckBox"
            android:layout_width="154dp"
            android:layout_height="wrap_content"
            android:text="@string/podcast"
            android:textSize="25dp"
            android:textFontWeight="500"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/podcast_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/podcast_price"
            android:textSize="25dp"
            android:textAlignment="viewEnd"/>

    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <ImageButton
        android:layout_width="228dp"
        android:layout_height="49dp"
        android:id="@+id/audio_proceed"
        android:src="@drawable/proceed_button"
        android:layout_gravity="center"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="72dp"/>

</LinearLayout>